--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ jupyter = "^1.0.0"
 jupyterlab = "^4.0.9"
 # API packages
 fastapi = { version = "^0.106.0", optional = true }
-uvicorn = { extras = ["standard"], version = "^0.25.0", optional = true }
+uvicorn = { version = "^0.25.0", optional = true }
 sqlalchemy = { version = "^2.0.23", optional = true }
 passlib = { version = "^1.7.4", optional = true }
 psycopg2-binary = { version = "^2.9.9", optional = true }
