--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ python = "^3.12"
 # Math stuff
 numpy = "^1.26.2"
 scipy = "^1.11.4"
-polars = { version = "^0.19.19", optional = true }
+polars = { version = "^0.19.19", optional = false }
 polars-lts-cpu = { version = "^0.19.19", optional = true }
 pyarrow = "^15.0.0"
 numba = "^0.59.0"
@@ -32,15 +32,15 @@ pyomo = "^6.7.0"
 jupyter = "^1.0.0"
 jupyterlab = "^4.0.9"
 # API packages
-fastapi = { version = "^0.106.0", optional = true }
-uvicorn = { version = "^0.25.0", optional = true }
-sqlalchemy = { version = "^2.0.23", optional = true }
-passlib = { version = "^1.7.4", optional = true }
-psycopg2-binary = { version = "^2.9.9", optional = true }
-sqlalchemy-utils = { version = "^0.41.1", optional = true }
-python-multipart = { version = "^0.0.9", optional = true }
-python-jose = { extras = ["cryptography"], version = "^3.3.0", optional = true }
-bcrypt = { version = "^4.1.2", optional = true }
+fastapi = { version = "^0.106.0", optional = false }
+uvicorn = { version = "^0.25.0", optional = false }
+sqlalchemy = { version = "^2.0.23", optional = false }
+passlib = { version = "^1.7.4", optional = false }
+psycopg2-binary = { version = "^2.9.9", optional = false }
+sqlalchemy-utils = { version = "^0.41.1", optional = false }
+python-multipart = { version = "^0.0.9", optional = false }
+python-jose = { extras = ["cryptography"], version = "^3.3.0", optional = false }
+bcrypt = { version = "^4.1.2", optional = false }
 mkdocs-include-markdown-plugin = { extras = ["cache"], version = "^6.0.5" }
 gurobipy = "^11.0.1"                                                             #96
 
