--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,12 +43,14 @@ python-jose = { extras = ["cryptography"], version = "^3.3.0", optional = true }
 bcrypt = { version = "^4.1.2", optional = true }
 mkdocs-include-markdown-plugin = { extras = ["cache"], version = "^6.0.5" }
 gurobipy = "^11.0.1"                                                             #96
+asyncpg = { version = "0.29.0", optional = true }
 
 [tool.poetry.extras]
 standard = ["polars"]
 legacy = ["polars-lts-cpu"]
 viz = ["seaborn", "plotly"] # We could make viz packages optional in the future.
 api = [
+    "polars",
     "fastapi",
     "uvicorn",
     "sqlalchemy",
@@ -58,6 +60,7 @@ api = [
     "python-multipart",
     "python-jose",
     "bcrypt",
+    "asyncpg",
 ] # We could make API packages optional in the future.
 
 [tool.poetry.group.dev.dependencies]
