--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ pyomo = "^6.7.0"
 jupyter = "^1.0.0"
 jupyterlab = "^4.0.9"
 # API packages
+asyncpg = { version = "^0.29.0", optional = true }
 gunicorn = { version = "^23.0.0", optional = true }
 fastapi = { version = "^0.106.0", optional = true }
 uvicorn = { extras = ["standard"], version = "^0.25.0", optional = true }
@@ -50,6 +51,7 @@ standard = ["polars"]
 legacy = ["polars-lts-cpu"]
 viz = ["seaborn", "plotly"] # We could make viz packages optional in the future.
 api = [
+    "asyncpg",
     "fastapi",
     "uvicorn",
     "sqlalchemy",
