--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,25 +12,25 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 # Math stuff
-numpy = "^1.26.2"
+numpy = "^2.0.0"
 scipy = "^1.11.4"
 polars = "^1.0"
-polars-lts-cpu = { version = "^0.19.19", optional = true }
-pyarrow = "^15.0.0"
-numba = "^0.59.0"
+polars-lts-cpu = { version = "^1.0", optional = true }
+pyarrow = "^17.0.0"
+numba = "^0.60.0"
 # Visualization
 seaborn = "^0.13.0"
-plotly = "^5.18.0"
+plotly = "^5.18"
 # Data handling/parsing
-pydantic = "^2.5.2"
-sympy = "^1.12"
-pyparsing = "^3.1.1"
+pydantic = "^2.9"
+sympy = "^1.0"
+pyparsing = "^3.0"
 # Optimization
-nevergrad = "^1.0.1"
-pyomo = "^6.7.0"
+nevergrad = "^1.0"
+pyomo = "^6.0"
 # Miscellaneous
-jupyter = "^1.0.0"
-jupyterlab = "^4.0.9"
+jupyter = "^1.0"
+jupyterlab = "^4.0"
 # API packages
 gunicorn = { version = "^23.0.0", optional = true }
 fastapi = { version = "^0.106.0", optional = true }
@@ -65,20 +65,21 @@ api = [
 server = ["gunicorn"]
 
 [tool.poetry.group.dev.dependencies]
-ruff = "^0.3.0"
-pytest = "^7.4.3"
-mkdocs = "^1.5.3"
+ruff = "^0.6"
+pytest = "^8.0"
+mkdocs = "^1.0"
 python-markdown-math = "^0.8"
 mkdocs-macros-plugin = "^1.0.5"
 djlint = "^1.34.1"
 pyparsing = { extras = ["diagrams"], version = "^3.1.1" }
-isort = "^5.13.2"
-mypy = "^1.8.0"
+isort = "^5.0"
+mypy = "^1.0"
 mkdocstrings = { extras = ["python"], version = "^0.24.1" }
 mkdocs-material = "^9.5.12"
 pytest-xdist = "^3.5.0"
 pytest-testmon = "^2.1.1"
 snakeviz = "^2.2.0"
+pytest-asyncio = "^0.24.0"
 
 
 [tool.ruff]
