--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ bcrypt = { version = "^4.1.2", optional = true }
 mkdocs-include-markdown-plugin = { extras = ["cache"], version = "^6.0.5" }
 gurobipy = "^11.0.1"                                                             #96
 asyncpg = { version = "0.29.0", optional = true }
+sqlmodel = "^0.0.22"
 
 [tool.poetry.extras]
 standard = ["polars"]
