--- a/pyproject.toml
+++ b/pyproject.toml
@@ -218,6 +218,7 @@ markers = [
     "schema: tests related to the Problem schema.",
     "utils: tests related to various utilities.",
     "nogithub: tests that should not be run in GitHub actions.",
+    "simulator_support: tests related to simulator and surrogate support",
 
 ]
 pythonpath = "."
