--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -87,7 +87,7 @@ plugins:
             ignore_init_summary: false
   - include-markdown
   - mkdocs-jupyter:
-      execute: true
+      execute: false
       include_requirejs: true
       custom_mathjax_url: "https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS_CHTML-full,Safe"
 
