--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ shap = "^0.46.0"
 scienceplots = "^2.1.1"
 tsp-solver = "^0.1"
 greenlet = "^3.1.1"
+pymoo = "^0.6.1.3"
 
 [tool.poetry.extras]
 standard = ["polars"]
