--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.12, <3.13"
 # Math stuff
 numpy = "^2.0.0"
 scipy = "^1.11.4"
@@ -50,7 +50,7 @@ shap = "^0.46.0"
 scienceplots = "^2.1.1"
 tsp-solver = "^0.1"
 greenlet = "^3.1.1"
-pymoo = "^0.6.1.3"
+pymoo = {git = "https://github.com/anyoptimization/pymoo"}
 
 [tool.poetry.extras]
 standard = ["polars"]
