--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ pyparsing = "^3.0"
 nevergrad = "^1.0.12"
 bayesian-optimization = "^1.0" # They recently released v2 which breaks compatibility with nevergrad 
 pyomo = "^6.8"
-gurobipy = "^11.0.1"
+gurobipy = "^12.0.0"
 tsp-solver = "^0.1"
 greenlet = "^3.1.1"
 pymoo = {git = "https://github.com/anyoptimization/pymoo"}
@@ -201,6 +201,9 @@ markers = [
     "simulator_support: tests related to simulator and surrogate support",
     "explainer: tests related to explainers and related functionalities.",
     "explanation_utils: tests related to explanations module utilities.",
+    "ea: tests related to evolutionary methods.",
+    "indicators: tests related to indicators.",
+    "testproblem: tests related to test problems.",
 
 ]
 pythonpath = "."
