--- a/requirements.txt
+++ b/requirements.txt
@@ -1,206 +1,59 @@
-annotated-types==0.7.0 ; python_version >= "3.12" and python_version < "4.0"
-anyio==3.7.1 ; python_version >= "3.12" and python_version < "4.0"
-appnope==0.1.4 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Darwin"
-argon2-cffi-bindings==21.2.0 ; python_version >= "3.12" and python_version < "4.0"
-argon2-cffi==23.1.0 ; python_version >= "3.12" and python_version < "4.0"
-arrow==1.3.0 ; python_version >= "3.12" and python_version < "4.0"
-asttokens==2.4.1 ; python_version >= "3.12" and python_version < "4.0"
-async-lru==2.0.4 ; python_version >= "3.12" and python_version < "4.0"
-asyncpg==0.29.0 ; python_version >= "3.12" and python_version < "4.0"
-attrs==24.2.0 ; python_version >= "3.12" and python_version < "4.0"
-babel==2.16.0 ; python_version >= "3.12" and python_version < "4.0"
-bayesian-optimization==1.5.1 ; python_version >= "3.12" and python_version < "4.0"
-bcrypt==4.2.0 ; python_version >= "3.12" and python_version < "4.0"
-beautifulsoup4==4.12.3 ; python_version >= "3.12" and python_version < "4.0"
-bleach==6.2.0 ; python_version >= "3.12" and python_version < "4.0"
-bracex==2.5.post1 ; python_version >= "3.12" and python_version < "4.0"
-certifi==2024.8.30 ; python_version >= "3.12" and python_version < "4.0"
-cffi==1.17.1 ; python_version >= "3.12" and python_version < "4.0"
-charset-normalizer==3.4.0 ; python_version >= "3.12" and python_version < "4.0"
-click==8.1.7 ; python_version >= "3.12" and python_version < "4.0"
-cma==4.0.0 ; python_version >= "3.12" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0"
-comm==0.2.2 ; python_version >= "3.12" and python_version < "4.0"
-contourpy==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
-coverage==7.6.4 ; python_version >= "3.12" and python_version < "4.0"
-cryptography==43.0.3 ; python_version >= "3.12" and python_version < "4.0"
-cssbeautifier==1.15.1 ; python_version >= "3.12" and python_version < "4.0"
-cycler==0.12.1 ; python_version >= "3.12" and python_version < "4.0"
-debugpy==1.8.8 ; python_version >= "3.12" and python_version < "4.0"
-decorator==5.1.1 ; python_version >= "3.12" and python_version < "4.0"
-defusedxml==0.7.1 ; python_version >= "3.12" and python_version < "4.0"
-djlint==1.36.1 ; python_version >= "3.12" and python_version < "4.0"
-ecdsa==0.19.0 ; python_version >= "3.12" and python_version < "4.0"
-editorconfig==0.12.4 ; python_version >= "3.12" and python_version < "4.0"
-execnet==2.1.1 ; python_version >= "3.12" and python_version < "4.0"
-executing==2.1.0 ; python_version >= "3.12" and python_version < "4.0"
-fastapi==0.106.0 ; python_version >= "3.12" and python_version < "4.0"
-fastjsonschema==2.20.0 ; python_version >= "3.12" and python_version < "4.0"
-fonttools==4.54.1 ; python_version >= "3.12" and python_version < "4.0"
-fqdn==1.5.1 ; python_version >= "3.12" and python_version < "4"
-ghp-import==2.1.0 ; python_version >= "3.12" and python_version < "4.0"
-greenlet==3.1.1 ; python_version < "3.13" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version >= "3.12"
-griffe==1.5.1 ; python_version >= "3.12" and python_version < "4.0"
-gurobipy==11.0.3 ; python_version >= "3.12" and python_version < "4.0"
-h11==0.14.0 ; python_version >= "3.12" and python_version < "4.0"
-hjson==3.1.0 ; python_version >= "3.12" and python_version < "4.0"
-httpcore==1.0.6 ; python_version >= "3.12" and python_version < "4.0"
-httptools==0.6.4 ; python_version >= "3.12" and python_version < "4.0"
-httpx==0.27.2 ; python_version >= "3.12" and python_version < "4.0"
-idna==3.10 ; python_version >= "3.12" and python_version < "4.0"
-iniconfig==2.0.0 ; python_version >= "3.12" and python_version < "4.0"
-ipykernel==6.29.5 ; python_version >= "3.12" and python_version < "4.0"
-ipython==8.29.0 ; python_version >= "3.12" and python_version < "4.0"
-ipywidgets==8.1.5 ; python_version >= "3.12" and python_version < "4.0"
-isoduration==20.11.0 ; python_version >= "3.12" and python_version < "4.0"
-isort==5.13.2 ; python_version >= "3.12" and python_version < "4.0"
-jedi==0.19.2 ; python_version >= "3.12" and python_version < "4.0"
-jinja2==3.1.4 ; python_version >= "3.12" and python_version < "4.0"
-joblib==1.4.2 ; python_version >= "3.12" and python_version < "4.0"
-jsbeautifier==1.15.1 ; python_version >= "3.12" and python_version < "4.0"
-json5==0.9.28 ; python_version >= "3.12" and python_version < "4.0"
-jsonpointer==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
-jsonschema-specifications==2024.10.1 ; python_version >= "3.12" and python_version < "4.0"
-jsonschema==4.23.0 ; python_version >= "3.12" and python_version < "4.0"
-jsonschema[format-nongpl]==4.23.0 ; python_version >= "3.12" and python_version < "4.0"
-jupyter-client==8.6.3 ; python_version >= "3.12" and python_version < "4.0"
-jupyter-console==6.6.3 ; python_version >= "3.12" and python_version < "4.0"
-jupyter-core==5.7.2 ; python_version >= "3.12" and python_version < "4.0"
-jupyter-events==0.10.0 ; python_version >= "3.12" and python_version < "4.0"
-jupyter-lsp==2.2.5 ; python_version >= "3.12" and python_version < "4.0"
-jupyter-server-terminals==0.5.3 ; python_version >= "3.12" and python_version < "4.0"
-jupyter-server==2.14.2 ; python_version >= "3.12" and python_version < "4.0"
-jupyter==1.1.1 ; python_version >= "3.12" and python_version < "4.0"
-jupyterlab-pygments==0.3.0 ; python_version >= "3.12" and python_version < "4.0"
-jupyterlab-server==2.27.3 ; python_version >= "3.12" and python_version < "4.0"
-jupyterlab-widgets==3.0.13 ; python_version >= "3.12" and python_version < "4.0"
-jupyterlab==4.3.0 ; python_version >= "3.12" and python_version < "4.0"
-jupytext==1.16.4 ; python_version >= "3.12" and python_version < "4.0"
-kiwisolver==1.4.7 ; python_version >= "3.12" and python_version < "4.0"
-llvmlite==0.43.0 ; python_version >= "3.12" and python_version < "4.0"
-markdown-it-py==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
-markdown==3.7 ; python_version >= "3.12" and python_version < "4.0"
-markupsafe==3.0.2 ; python_version >= "3.12" and python_version < "4.0"
-matplotlib-inline==0.1.7 ; python_version >= "3.12" and python_version < "4.0"
-matplotlib==3.9.2 ; python_version >= "3.12" and python_version < "4.0"
-mdit-py-plugins==0.4.2 ; python_version >= "3.12" and python_version < "4.0"
-mdurl==0.1.2 ; python_version >= "3.12" and python_version < "4.0"
-mergedeep==1.3.4 ; python_version >= "3.12" and python_version < "4.0"
-mistune==3.0.2 ; python_version >= "3.12" and python_version < "4.0"
-mkdocs-autorefs==1.2.0 ; python_version >= "3.12" and python_version < "4.0"
-mkdocs-get-deps==0.2.0 ; python_version >= "3.12" and python_version < "4.0"
-mkdocs-include-markdown-plugin[cache]==6.2.2 ; python_version >= "3.12" and python_version < "4.0"
-mkdocs-jupyter==0.25.1 ; python_version >= "3.12" and python_version < "4.0"
-mkdocs-macros-plugin==1.3.7 ; python_version >= "3.12" and python_version < "4.0"
-mkdocs-material-extensions==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
-mkdocs-material==9.5.44 ; python_version >= "3.12" and python_version < "4.0"
-mkdocs==1.6.1 ; python_version >= "3.12" and python_version < "4.0"
-mkdocstrings-python==1.12.2 ; python_version >= "3.12" and python_version < "4.0"
-mkdocstrings==0.27.0 ; python_version >= "3.12" and python_version < "4.0"
-mpmath==1.3.0 ; python_version >= "3.12" and python_version < "4.0"
-mypy-extensions==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
-mypy==1.13.0 ; python_version >= "3.12" and python_version < "4.0"
-nbclient==0.10.0 ; python_version >= "3.12" and python_version < "4.0"
-nbconvert==7.16.4 ; python_version >= "3.12" and python_version < "4.0"
-nbformat==5.10.4 ; python_version >= "3.12" and python_version < "4.0"
-nest-asyncio==1.6.0 ; python_version >= "3.12" and python_version < "4.0"
-nevergrad==1.0.3 ; python_version >= "3.12" and python_version < "4.0"
-notebook-shim==0.2.4 ; python_version >= "3.12" and python_version < "4.0"
-notebook==7.0.7 ; python_version >= "3.12" and python_version < "4.0"
-numba==0.60.0 ; python_version >= "3.12" and python_version < "4.0"
-numpy==2.0.2 ; python_version >= "3.12" and python_version < "4.0"
-overrides==7.7.0 ; python_version >= "3.12" and python_version < "4.0"
-packaging==24.2 ; python_version >= "3.12" and python_version < "4.0"
-paginate==0.5.7 ; python_version >= "3.12" and python_version < "4.0"
-pandas==2.2.3 ; python_version >= "3.12" and python_version < "4.0"
-pandocfilters==1.5.1 ; python_version >= "3.12" and python_version < "4.0"
-parso==0.8.4 ; python_version >= "3.12" and python_version < "4.0"
-passlib==1.7.4 ; python_version >= "3.12" and python_version < "4.0"
-pathspec==0.12.1 ; python_version >= "3.12" and python_version < "4.0"
-pexpect==4.9.0 ; python_version >= "3.12" and python_version < "4.0" and (sys_platform != "win32" and sys_platform != "emscripten")
-pillow==11.0.0 ; python_version >= "3.12" and python_version < "4.0"
-platformdirs==4.3.6 ; python_version >= "3.12" and python_version < "4.0"
-plotly==5.24.1 ; python_version >= "3.12" and python_version < "4.0"
-pluggy==1.5.0 ; python_version >= "3.12" and python_version < "4.0"
-ply==3.11 ; python_version >= "3.12" and python_version < "4.0"
-polars==1.13.0 ; python_version >= "3.12" and python_version < "4.0"
-prometheus-client==0.21.0 ; python_version >= "3.12" and python_version < "4.0"
-prompt-toolkit==3.0.48 ; python_version >= "3.12" and python_version < "4.0"
-psutil==6.1.0 ; python_version >= "3.12" and python_version < "4.0"
-psycopg2-binary==2.9.10 ; python_version >= "3.12" and python_version < "4.0"
-ptyprocess==0.7.0 ; python_version >= "3.12" and python_version < "4.0" and (os_name != "nt" or sys_platform != "win32" and sys_platform != "emscripten")
-pure-eval==0.2.3 ; python_version >= "3.12" and python_version < "4.0"
-pyarrow==17.0.0 ; python_version >= "3.12" and python_version < "4.0"
-pyasn1==0.6.1 ; python_version >= "3.12" and python_version < "4.0"
-pycparser==2.22 ; python_version >= "3.12" and python_version < "4.0"
-pydantic-core==2.23.4 ; python_version >= "3.12" and python_version < "4.0"
-pydantic==2.9.2 ; python_version >= "3.12" and python_version < "4.0"
-pygments==2.18.0 ; python_version >= "3.12" and python_version < "4.0"
-pymdown-extensions==10.12 ; python_version >= "3.12" and python_version < "4.0"
-pyomo==6.8.0 ; python_version >= "3.12" and python_version < "4.0"
-pyparsing==3.2.0 ; python_version >= "3.12" and python_version < "4.0"
-pyparsing[diagrams]==3.2.0 ; python_version >= "3.12" and python_version < "4.0"
-pytest-asyncio==0.24.0 ; python_version >= "3.12" and python_version < "4.0"
-pytest-testmon==2.1.1 ; python_version >= "3.12" and python_version < "4.0"
-pytest-xdist==3.6.1 ; python_version >= "3.12" and python_version < "4.0"
-pytest==8.3.3 ; python_version >= "3.12" and python_version < "4.0"
-python-dateutil==2.9.0.post0 ; python_version >= "3.12" and python_version < "4.0"
-python-dotenv==1.0.1 ; python_version >= "3.12" and python_version < "4.0"
-python-jose[cryptography]==3.3.0 ; python_version >= "3.12" and python_version < "4.0"
-python-json-logger==2.0.7 ; python_version >= "3.12" and python_version < "4.0"
-python-markdown-math==0.8 ; python_version >= "3.12" and python_version < "4.0"
-python-multipart==0.0.9 ; python_version >= "3.12" and python_version < "4.0"
-pytz==2024.2 ; python_version >= "3.12" and python_version < "4.0"
-pywin32==308 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.12" and python_version < "4.0"
-pywinpty==2.0.14 ; python_version >= "3.12" and python_version < "4.0" and os_name == "nt"
-pyyaml-env-tag==0.1 ; python_version >= "3.12" and python_version < "4.0"
-pyyaml==6.0.2 ; python_version >= "3.12" and python_version < "4.0"
-pyzmq==26.2.0 ; python_version >= "3.12" and python_version < "4.0"
-railroad-diagrams==3.0.1 ; python_version >= "3.12" and python_version < "4.0"
-referencing==0.35.1 ; python_version >= "3.12" and python_version < "4.0"
-regex==2024.11.6 ; python_version >= "3.12" and python_version < "4.0"
-requests==2.32.3 ; python_version >= "3.12" and python_version < "4.0"
-rfc3339-validator==0.1.4 ; python_version >= "3.12" and python_version < "4.0"
-rfc3986-validator==0.1.1 ; python_version >= "3.12" and python_version < "4.0"
-rpds-py==0.21.0 ; python_version >= "3.12" and python_version < "4.0"
-rsa==4.9 ; python_version >= "3.12" and python_version < "4"
-ruff==0.6.9 ; python_version >= "3.12" and python_version < "4.0"
-scikit-learn==1.5.2 ; python_version >= "3.12" and python_version < "4.0"
-scipy==1.14.1 ; python_version >= "3.12" and python_version < "4.0"
-seaborn==0.13.2 ; python_version >= "3.12" and python_version < "4.0"
-send2trash==1.8.3 ; python_version >= "3.12" and python_version < "4.0"
-setuptools==75.4.0 ; python_version >= "3.12" and python_version < "4.0"
-six==1.16.0 ; python_version >= "3.12" and python_version < "4.0"
-snakeviz==2.2.2 ; python_version >= "3.12" and python_version < "4.0"
-sniffio==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
-soupsieve==2.6 ; python_version >= "3.12" and python_version < "4.0"
-sqlalchemy-utils==0.41.2 ; python_version >= "3.12" and python_version < "4.0"
-sqlalchemy==2.0.36 ; python_version >= "3.12" and python_version < "4.0"
-stack-data==0.6.3 ; python_version >= "3.12" and python_version < "4.0"
-starlette==0.27.0 ; python_version >= "3.12" and python_version < "4.0"
-super-collections==0.5.3 ; python_version >= "3.12" and python_version < "4.0"
-sympy==1.13.3 ; python_version >= "3.12" and python_version < "4.0"
-tenacity==9.0.0 ; python_version >= "3.12" and python_version < "4.0"
-termcolor==2.5.0 ; python_version >= "3.12" and python_version < "4.0"
-terminado==0.18.1 ; python_version >= "3.12" and python_version < "4.0"
-threadpoolctl==3.5.0 ; python_version >= "3.12" and python_version < "4.0"
-tinycss2==1.4.0 ; python_version >= "3.12" and python_version < "4.0"
-tornado==6.4.1 ; python_version >= "3.12" and python_version < "4.0"
-tqdm==4.67.0 ; python_version >= "3.12" and python_version < "4.0"
-traitlets==5.14.3 ; python_version >= "3.12" and python_version < "4.0"
-types-python-dateutil==2.9.0.20241003 ; python_version >= "3.12" and python_version < "4.0"
-typing-extensions==4.12.2 ; python_version >= "3.12" and python_version < "4.0"
-tzdata==2024.2 ; python_version >= "3.12" and python_version < "4.0"
-uri-template==1.3.0 ; python_version >= "3.12" and python_version < "4.0"
-urllib3==2.2.3 ; python_version >= "3.12" and python_version < "4.0"
-uvicorn[standard]==0.25.0 ; python_version >= "3.12" and python_version < "4.0"
-uvloop==0.21.0 ; (sys_platform != "win32" and sys_platform != "cygwin") and platform_python_implementation != "PyPy" and python_version >= "3.12" and python_version < "4.0"
-watchdog==6.0.0 ; python_version >= "3.12" and python_version < "4.0"
-watchfiles==0.24.0 ; python_version >= "3.12" and python_version < "4.0"
-wcmatch==10.0 ; python_version >= "3.12" and python_version < "4.0"
-wcwidth==0.2.13 ; python_version >= "3.12" and python_version < "4.0"
-webcolors==24.11.1 ; python_version >= "3.12" and python_version < "4.0"
-webencodings==0.5.1 ; python_version >= "3.12" and python_version < "4.0"
-websocket-client==1.8.0 ; python_version >= "3.12" and python_version < "4.0"
-websockets==14.1 ; python_version >= "3.12" and python_version < "4.0"
-widgetsnbextension==4.0.13 ; python_version >= "3.12" and python_version < "4.0"
+about-time==4.2.1 ; python_version == "3.12"
+alive-progress==3.2.0 ; python_version == "3.12"
+annotated-types==0.7.0 ; python_version == "3.12"
+autograd==1.8.0 ; python_version == "3.12"
+bayesian-optimization==1.4.0 ; python_version == "3.12"
+clarabel==0.10.0 ; python_version == "3.12"
+cloudpickle==3.1.1 ; python_version == "3.12"
+cma==4.0.0 ; python_version == "3.12"
+colorama==0.4.6 ; python_version == "3.12" and platform_system == "Windows"
+contourpy==1.3.2 ; python_version == "3.12"
+cvxpy==1.6.5 ; python_version == "3.12"
+cycler==0.12.1 ; python_version == "3.12"
+deprecated==1.2.18 ; python_version == "3.12"
+dill==0.4.0 ; python_version == "3.12"
+directsearch==1.0 ; python_version == "3.12"
+fonttools==4.57.0 ; python_version == "3.12"
+grapheme==0.6.0 ; python_version == "3.12"
+greenlet==3.2.1 ; python_version == "3.12"
+gurobipy==12.0.2 ; python_version == "3.12"
+jinja2==3.1.6 ; python_version == "3.12"
+joblib==1.5.0 ; python_version == "3.12"
+kiwisolver==1.4.8 ; python_version == "3.12"
+llvmlite==0.44.0 ; python_version == "3.12"
+markupsafe==3.0.2 ; python_version == "3.12"
+matplotlib==3.10.3 ; python_version == "3.12"
+mpmath==1.3.0 ; python_version == "3.12"
+nevergrad==1.0.12 ; python_version == "3.12"
+numba==0.61.2 ; python_version == "3.12"
+numpy==2.2.5 ; python_version == "3.12"
+osqp==1.0.4 ; python_version == "3.12"
+packaging==25.0 ; python_version == "3.12"
+pandas==2.2.3 ; python_version == "3.12"
+pillow==11.2.1 ; python_version == "3.12"
+ply==3.11 ; python_version == "3.12"
+polars==1.29.0 ; python_version == "3.12"
+pyarrow==20.0.0 ; python_version == "3.12"
+pydantic-core==2.33.2 ; python_version == "3.12"
+pydantic==2.11.4 ; python_version == "3.12"
+pymoo @ git+https://github.com/anyoptimization/pymoo@75de8f544fef2b45302c34b1035ac582663efe08 ; python_version == "3.12"
+pyomo==6.9.2 ; python_version == "3.12"
+pyparsing==3.2.3 ; python_version == "3.12"
+pyscipopt==5.4.1 ; python_version == "3.12"
+python-dateutil==2.9.0.post0 ; python_version == "3.12"
+pytz==2025.2 ; python_version == "3.12"
+scikit-learn==1.6.1 ; python_version == "3.12"
+scipy==1.15.3 ; python_version == "3.12"
+scs==3.2.7.post2 ; python_version == "3.12"
+setuptools==80.3.1 ; python_version == "3.12"
+shap==0.47.2 ; python_version == "3.12"
+six==1.17.0 ; python_version == "3.12"
+slicer==0.0.8 ; python_version == "3.12"
+sympy==1.14.0 ; python_version == "3.12"
+threadpoolctl==3.6.0 ; python_version == "3.12"
+tqdm==4.67.1 ; python_version == "3.12"
+tsp-solver==0.1 ; python_version == "3.12"
+typing-extensions==4.13.2 ; python_version == "3.12"
+typing-inspection==0.4.0 ; python_version == "3.12"
+tzdata==2025.2 ; python_version == "3.12"
+wrapt==1.17.2 ; python_version == "3.12"
